# ModernCMake

1_HelloWorld/: CMakeLists.txt
2_BasicProject/: CMakeLists.txt  main.cpp
3_IntermediateProject/: CMakeLists.txt
3_IntermediateProject/app/: CMakeLists.txt
3_IntermediateProject/src/: CMakeLists.txt
4_VariablesOptions/: CMakeLists.txt
4_VariablesOptions/app/: CMakeLists.txt
4_VariablesOptions/src/: CMakeLists.txt
5_ConfigureFile/: CMakeLists.txt  Makefile
5_ConfigureFile/config/: CMakeLists.txt
5_ConfigureFile/src/: CMakeLists.txt  MyLib.cpp
6_SourcesAndHeaders/app/: CMakeLists.txt  main.cpp
6_SourcesAndHeaders/src/: CMakeLists.txt
7_ExternalGit/: CMakeLists.txt
7_ExternalGit/app/: main.cpp
8_FetchContent/: CMakeLists.txt
8_FetchContent/app/: CMakeLists.txt  main.cpp
8_FetchContent/cmake/: AddGitSubmodule.cmake
8_FetchContent/src/: MyLib.cpp
9_DoxygenAndUnitTests/: CMakeLists.txt
9_DoxygenAndUnitTests/app/: main.cpp
9_DoxygenAndUnitTests/src/: CMakeLists.txt  MyLib.cpp  MyLib.h
9_DoxygenAndUnitTests/tests/: CMakeLists.txt  main.cpp
